gobmkida/g3/defend4
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/defend4/src/engine/reading.c:2136:44: error: use of undeclared identifier 'xmmword_4AEC30'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4AEC30); 
                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/defend4/src/obj/1/reading.o] Error 1
